[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "CFA"
version = "0.1.0"
description = "CFA Python package"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22,<3",
  "pandas>=1.5,<3",
  "scikit-learn>=1.1,<2",
  "matplotlib>=3.6,<4",
  "seaborn>=0.12,<0.14",
]

